Replace references to Nylas in many places

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="background: #fff">
 <head>
-  <title>Nylas Mail</title>
+  <title>Merani</title>
 
   <meta http-equiv="Content-Security-Policy" content="default-src * nylas:; script-src 'self' 'unsafe-eval' chrome-extension://react-developer-tools; style-src * 'unsafe-inline' nylas:; img-src * data: nylas: file:;">
 
