Rename the nylas: URL scheme to merani:

--- a/app/internal_packages/message-list/spec/autolinker-fixtures/nylas-url-in.html
+++ b/app/internal_packages/message-list/spec/autolinker-fixtures/nylas-url-in.html
@@ -1,11 +1,11 @@
 Hello world
 
-nylas is cool.
+merani is cool.
 
-nylas://plugins?test=stuff
+merani://plugins?test=stuff
 
-nylas:plugins?test=stuff
+merani:plugins?test=stuff
 
-<strong>nylas://plugins?test=stuff</strong>
+<strong>merani://plugins?test=stuff</strong>
 
-Don't you like nylas?
+Don't you like merani?
