--- a/app/internal_packages/message-list/spec/autolinker-fixtures/nylas-url-out.html
+++ b/app/internal_packages/message-list/spec/autolinker-fixtures/nylas-url-out.html
@@ -2,10 +2,10 @@ Hello world
 
 nylas is cool.
 
-<a href="nylas://plugins?test=stuff" title="nylas://plugins?test=stuff">nylas://plugins?test=stuff</a>
+<a href="merani://plugins?test=stuff" title="merani://plugins?test=stuff">merani://plugins?test=stuff</a>
 
-<a href="nylas:plugins?test=stuff" title="nylas:plugins?test=stuff">nylas:plugins?test=stuff</a>
+<a href="merani:plugins?test=stuff" title="merani:plugins?test=stuff">merani:plugins?test=stuff</a>
 
-<strong><a href="nylas://plugins?test=stuff" title="nylas://plugins?test=stuff">nylas://plugins?test=stuff</a></strong>
+<strong><a href="merani://plugins?test=stuff" title="merani://plugins?test=stuff">merani://plugins?test=stuff</a></strong>
 
 Don't you like nylas?
