--- a/app/static/index.html
+++ b/app/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Merani</title>
 
-  <meta http-equiv="Content-Security-Policy" content="default-src * nylas:; script-src 'self' 'unsafe-eval' chrome-extension://react-developer-tools; style-src * 'unsafe-inline' nylas:; img-src * data: nylas: file:;">
+  <meta http-equiv="Content-Security-Policy" content="default-src * merani:; script-src 'self' 'unsafe-eval' chrome-extension://react-developer-tools; style-src * 'unsafe-inline' merani:; img-src * data: merani: file:;">
 
   <script src="index.js"></script>
 </head>
