Fix quoted text specs to reflect removal of tail whitespace

--- a/app/spec/fixtures/emails/email_15_stripped.html
+++ b/app/spec/fixtures/emails/email_15_stripped.html
@@ -2,11 +2,4 @@
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 </head>
 <body>
-Test 123<br><br><br>
-
-
-
-
-
-
-</body>
+Test 123</body>
