--- a/app/spec/fixtures/emails/email_17_stripped.html
+++ b/app/spec/fixtures/emails/email_17_stripped.html
@@ -84,10 +84,4 @@ erences</a>
                                         <br>
                                         <br>
                                        =20
-                                    </td>
-                                </tr>
-                            </tbody></table>
-                        </td>
-                    </tr>
-                </tbody></table>
-            </center>
+                                    </td></tr></tbody></table></td></tr></tbody></table></center>
