--- a/app/spec/fixtures/emails/email_18_stripped.html
+++ b/app/spec/fixtures/emails/email_18_stripped.html
@@ -11,10 +11,4 @@
 <div><br>
 </div>
 <div>Regards,</div>
-<div>FROM</div>
-</div>
-<div>
-<div><br>
-</div>
-<div><br>
-</div></div></body>
+<div>FROM</div></div></body>
