--- a/app/spec/fixtures/emails/email_21_stripped.html
+++ b/app/spec/fixtures/emails/email_21_stripped.html
@@ -12,5 +12,4 @@
           </blockquote>
         </div></div></div></blockquote></div><br><br clear="all"><div><br></div>-- <br><div class="gmail_signature" data-smartmail="gmail_signature"><div dir="ltr"><div>Ms. Y J<br><br><div> College 2010<br>AB in Economics</div><div><a href="http://www.twitter.com/Yz" target="_blank">@Yz</a></div><div><a href="http://www.app.com" target="_blank">www.app.com</a></div><div><br></div></div></div></div>
         <div>This is some unique text after the signature. It's as if I'm
-        typing inline. We should NOT collapse this area</div>
-</div>
+        typing inline. We should NOT collapse this area</div></div>
