--- a/app/spec/fixtures/emails/email_2_stripped.html
+++ b/app/spec/fixtures/emails/email_2_stripped.html
@@ -54,15 +54,4 @@ TypeError: 'NoneType' object is not iterable
 <p><br>
 </p>
 <p>But turns out Tom fixed it <a href="https://bitbucket.org/mjs0/imapclient/commits/1de7a0b63367d49587b0454804d4e29079f84f0b?at=default">
-here</a>.&nbsp;&nbsp;I don't think it's yet on PyPI.<br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-
-</div>
-
-</body>
+here</a>.&nbsp;&nbsp;I don't think it's yet on PyPI.</p></div></body>
