--- a/app/spec/fixtures/emails/email_3_stripped.html
+++ b/app/spec/fixtures/emails/email_3_stripped.html
@@ -8,13 +8,4 @@
 </p>
 <p><br>
 </p>
-<p>hope you feel better!&nbsp;<br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-
-</div>
-
-</body>
+<p>hope you feel better!&nbsp;</p></div></body>
