--- a/app/spec/fixtures/emails/email_4_stripped.html
+++ b/app/spec/fixtures/emails/email_4_stripped.html
@@ -25,16 +25,4 @@ uld cover the cost.&nbsp;<br>
 </p>
 <p>Thanks,<br>
 </p>
-<p>Makala&nbsp;<br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<br>
-<br>
-
-</div>
-
-
-</body>
+<p>Makala&nbsp;</p></div></body>
