--- a/app/spec/fixtures/emails/email_7_stripped.html
+++ b/app/spec/fixtures/emails/email_7_stripped.html
@@ -8,13 +8,4 @@
 </p>
 <p><br>
 </p>
-<p>And congrats on YC!&nbsp;<br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-
-</div>
-
-</body>
+<p>And congrats on YC!&nbsp;</p></div></body>
