--- a/app/spec/fixtures/emails/email_8_stripped.html
+++ b/app/spec/fixtures/emails/email_8_stripped.html
@@ -4,13 +4,4 @@
 </head>
 <body dir="ltr">
 <div id="divtagdefaultwrapper" style="font-size:10pt;color:#000000;background-color:#FFFFFF;font-family:Arial,Helvetica,sans-serif;">
-<p>What about Haystack?&nbsp;https://www.usenix.org/legacy/event/osdi10/tech/full_papers/Beaver.pdf<br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-
-</div>
-
-</body>
+<p>What about Haystack?&nbsp;https://www.usenix.org/legacy/event/osdi10/tech/full_papers/Beaver.pdf</p></div></body>
