--- a/app/spec/fixtures/emails/email_13_stripped.html
+++ b/app/spec/fixtures/emails/email_13_stripped.html
@@ -4,9 +4,4 @@
 
       Having the function would be great. <br>
 
-      -Abhishek Kona <br>
-    </div>
-
-    
-
-</body>
+      -Abhishek Kona </div></body>
