--- a/app/spec/fixtures/emails/email_20_stripped.html
+++ b/app/spec/fixtures/emails/email_20_stripped.html
@@ -1,1 +1,1 @@
-<div dir="ltr">Yaaay!&nbsp; So excited :) &nbsp;And no worries, see you in PR, if not before</div><div class="gmail_extra"><br></div>
+<div dir="ltr">Yaaay!&nbsp; So excited :) &nbsp;And no worries, see you in PR, if not before</div>
