--- a/app/spec/fixtures/emails/email_22_stripped.html
+++ b/app/spec/fixtures/emails/email_22_stripped.html
@@ -3,14 +3,4 @@
 <meta content="text/html; charset=us-ascii">
 </head>
 <body>
-<div>And a reply!<br>
-<br>
-<div class="acompli_signature"></div>
-<br>
-</div>
-
-
-
-
-
-</body>
+<div>And a reply!</div></body>
