--- a/app/spec/fixtures/emails/email_5_stripped.html
+++ b/app/spec/fixtures/emails/email_5_stripped.html
@@ -1,3 +1,2 @@
 <head></head><body><div id="inbox-html-wrapper" class="show-quoted-text"><meta http-equiv="Content-Type" content="text/html;
-charset=utf-8"><div dir="ltr"></div></div>
-</body>
+charset=utf-8"></div></body>
