--- a/app/spec/fixtures/emails/email_9_stripped.html
+++ b/app/spec/fixtures/emails/email_9_stripped.html
@@ -24,10 +24,4 @@
 <div class="gmail_quote"><br>
 <blockquote class="gmail_quote" style="margin:0 0 0 .8ex;border-left:1px #ccc solid;padding-left:1ex">
 <div dir="ltr"><span class="HOEnZb"><font color="#888888"></font></span></div>
-</blockquote>
-</div>
-<br>
-</div>
-</div>
-
-</body>
+</blockquote></div></div></div></body>
