Clean up quoted text processing, remove dead code

--- a/app/spec/fixtures/emails/email_1_actual.html
+++ b/app/spec/fixtures/emails/email_1_actual.html
@@ -15,4 +15,5 @@ Concerning timezones, an event should always be associated with a timezone. Havi
 
 Thanks for your detailed bug reports,</span></font></pre>
 <pre class="special_formatting"><font face="Calibri"><span style="font-size: 15px;">
-Karim</span></font></pre></span></div></body>
+Karim</span></font></pre>
+<pre class="special_formatting" style="color: rgb(0, 0, 0); font-family: Calibri, sans-serif; font-size: 14px;"><span style="font-family: Calibri; font-size: 11pt; font-weight: bold;">From: </span><span style="font-family: Calibri; font-size: 11pt;"> Kavya Joshi &lt;</span><a href="mailto:kavya@nylas.com" style="font-family: Calibri; font-size: 11pt;">kavya@nylas.com</a><span style="font-family: Calibri; font-size: 11pt;">&gt;</span></pre></span></div></body>
