--- a/app/spec/fixtures/emails/email_9_stripped.html
+++ b/app/spec/fixtures/emails/email_9_stripped.html
@@ -18,10 +18,4 @@
 <p style="font-size:13px;margin:0px;font-family:Arial;color:rgb(35,35,35)"><span style="letter-spacing:0px"><br>
 </span></p>
 <p style="font-size:13px;margin:0px;font-family:Arial;color:rgb(35,35,35)"><span style="letter-spacing:0px">Thank you,</span></p>
-<p style="font-size:13px;margin:0px;font-family:Arial;color:rgb(35,35,35)"><span style="letter-spacing:0px">Eva</span></p>
-</div>
-<div class="gmail_extra"><br>
-<div class="gmail_quote"><br>
-<blockquote class="gmail_quote" style="margin:0 0 0 .8ex;border-left:1px #ccc solid;padding-left:1ex">
-<div dir="ltr"><span class="HOEnZb"><font color="#888888"></font></span></div>
-</blockquote></div></div></div></body>
+<p style="font-size:13px;margin:0px;font-family:Arial;color:rgb(35,35,35)"><span style="letter-spacing:0px">Eva</span></p></div></div></body>
